@@ -1,5 +1,12 @@
 2015-12-10  Matthew Wahab  <matthew.wahab@arm.com>
 
+	* aarch64-opc.c (aarch64_sys_regs): Add "uao".
+	(aarch64_sys_reg_supported_p): Add comment.  Add checks for "uao".
+	(aarch64_pstatefields): Add "uao".
+	(aarch64_pstatefield_supported_p): Add checks for "uao".
+
+2015-12-10  Matthew Wahab  <matthew.wahab@arm.com>
+
 	* aarch64-opc.c (aarch64_sys_regs): Add "vsesr_el2", "erridr_el1",
 	"errselr_el1", "erxfr_el1", "erxctlr", "erxaddr_el1",
 	"erxmisc0_el1", "erxmisc1_el1", "disr_el1" and "vdisr_el2".
